--- a/main.css
+++ b/main.css
@@ -1,6 +1,78 @@
-div {
+body > div {
     display: inline-block;
     width: 800px;
     margin-left: calc( (100% - 800px)/ 2 );
-    background-color: blueviolet;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+
+
+header {display: inline-block;
+    width: 100%;
+
+    }
+   header > img {
+    display: inline-block;
+    float: left;
+    width: 60px;
+
+    }
+    nav {
+        display: inline-block;
+        float: right;
+        margin-top: 10px;
+    }
+    a {
+        display: inline-block;
+        float: left;
+        line-height: 20px;
+        padding: 10px;
+        margin-left: 15px;
+        text-decoration: none;
+    }
+    a:nth-of-type(5) {
+        padding-left: 30px;
+        padding-right: 30px;
+        margin-left: 30px;
+        margin-right: 5px;
+        border: 4px solid #9e9e9e;
+        border-radius: 25px;
+        margin-top: -5px;
+    }
+    
+
+main {
+    display: inline-block;
+    width: 100%;
+    margin-top: 50px;
+}
+
+   main > div {
+        display: inline-block;
+        float: left;
+        width: 45%;
+        color: #9E9E9E;
+        margin-top: 30px;
+    }
+        
+
+        h1 { 
+            display: inline-block;
+            font-size: 100px;
+            margin: 0;
+        }
+        
+        
+        p {
+            display: inline-block;
+            float: left;
+            font-size: 30px;
+            margin: 0;
+            
+        }
+       main > img {
+            display: inline-block;
+            float: right;
+            width: 45%
+
+        } 
+    
